--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>3.0.0-M6</version>
         </dependency>
         <dependency>
+          <groupId>jakarta.ws.rs</groupId>
+          <artifactId>jakarta.ws.rs-api</artifactId>
+          <version>3.0.0-M1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jersey</artifactId>
             <exclusions>
